src/test/ui/pattern/usefulness/issue-4321.stderr
error[E0004]: non-exhaustive patterns: `(true, false)` not covered
  --> $DIR/issue-4321.rs:3:31
   |
LL |     println!("foo {:}", match tup {
   |                               ^^^ pattern `(true, false)` not covered
   |
   = note: the matched value is of type `(bool, bool)`
help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   |
LL ~         (true, true) => "baz",
LL +         (true, false) => todo!()
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
